--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
-.qb{
-  height: 100vh;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-}
 header{
   font-size: 28px;
   font-weight: 600;
+  margin-bottom: 10px;
+}
+.qb {
+  width: 300px;
+}
+.f-input label {
+  display: block;
+}
+.f-input input{
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 20px;
 }
 .filed button{
   height: 28px;
   width: 20%;
-  margin-top: 20px;
+  margin-top: 2px;
 }
